--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,9 +64,13 @@
 
   .logo{
     color: #393939;
-    font-size: 2vw;
+    font-size: 1.3vw;
     font-weight: bold;
     font-family: 'Gloock', serif;
+  }
+
+  .nav-menu-text{
+    margin-left: 50%;
   }
 
   @media only screen and (max-width: 600px) {
@@ -78,6 +82,11 @@
   .row-class{
     width: 100%;
     height: 100%;
+  }
+
+  .navbar-nav{
+    width: 100%;
+    justify-content: space-between;
   }
 
   .main-content{
@@ -94,7 +103,6 @@
   .center-text-content{
     color: #fff;
       width: 60%;
-      z-index: 100;
   }
 
   .image-div{
@@ -124,7 +132,11 @@
     rgba(174, 190, 255, 0.506)
   );
   font-weight: 700;
+  }
 
+  .nav-link{
+    font-weight: bolder;
+    font-size: 1vw;
   }
 
   .empty-cercile{
@@ -167,7 +179,7 @@
     width: 100%;
     min-height: 90vh;
     height: auto;
-    padding: 5%;
+    padding: 2%;
   }
 
   @media only screen and (max-width: 600px) {
@@ -179,7 +191,8 @@
 
   .course-card{
   border-radius: 10px;
-  margin: 5%;
+  min-height: 25vh;
+  max-height: 35vh;
   padding: 5%;
   z-index: 1000;
   cursor: pointer;
@@ -288,6 +301,25 @@
     rgba(129, 190, 244, 0.9),
     rgba(46, 203, 255, 0.671)
   );
+  }
+
+  .cards-row:nth-child(2) .col-md:nth-child(4) .course-card{
+    background: linear-gradient(
+    to right bottom,
+    rgba(41, 230, 34, 0.9),
+    rgba(95, 255, 46, 0.671)
+  );
+  }
+
+  .cards-row:nth-child(3) .col-md:nth-child(1) .course-card{
+    width: 40%;
+    height: 60vh;
+    background: linear-gradient(
+    to right bottom,
+    rgba(227, 34, 230, 0.9),
+    rgba(255, 46, 231, 0.671)
+  );
+  padding: 0% 2%;
   }
 
   .main-footer{
