--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,333 +1,157 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .main {
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    height: 100vh;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .main-header{
-    width: 100%;
-    height: 7vh;
-  }
+body {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 100vh;
+}
 
-  .main-nav{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+/* header style */
+.nav-menu-text {
+  margin-left: 50%;
+}
 
-  .main-section{
-    width: 100%;
-    height: 6vh;
-    overflow: hidden;
-  }
+.navbar-nav {
+  width: 100%;
+  justify-content: space-between;
+}
 
-  .navbar{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    justify-content: center;
-  }
+.logo {
+  color: #393939;
+  font-size: 1.3vw;
+  font-weight: bold;
+  font-family: 'Gloock', serif;
+}
 
-  .bannar-section{
-    width: 100%;
-    height: 60vh;
-    background-color: rgb(166, 141, 239);
-    position: relative;
+@media only screen and (max-width: 600px) {
+  .logo {
+    font-size: 5vw;
   }
+}
 
-  .nav_logo{
-    width: 100%;
-    height: 7vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+/* bannar section style */
+.bannar-section {
+  width: 100%;
+  height: 60vh;
+  background: linear-gradient(to right bottom,
+      rgba(232, 125, 251, 0.9),
+      rgba(201, 40, 210, 0.876));
+  position: relative;
+}
 
-  .menu-title{
-    padding: 0% 5%;
-    font-size: 1vw;
-    font-weight: bold;
-  }
+.row-class {
+  width: 100%;
+  height: 100%;
+}
 
-  .menu-title a{
-    color: #242424;
-    text-decoration: none;
-  }
+.main-content {
+  text-align: start;
+  width: 100%;
+  height: 100%;
+  font-size: 3vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Abril Fatface', cursive;
+}
 
-  .logo{
-    color: #393939;
-    font-size: 1.3vw;
-    font-weight: bold;
-    font-family: 'Gloock', serif;
-  }
+.center-text-content {
+  color: #fff;
+  width: 60%;
+}
 
-  .nav-menu-text{
-    margin-left: 50%;
-  }
+.image-div {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  @media only screen and (max-width: 600px) {
-    .logo{
-      font-size: 5vw;
-    }
-  }
+.main_content_line {
+  width: 90%;
+  height: 0.3vh;
+  background-color: rgba(255, 255, 255, 0.601);
+  margin-top: 5%;
+}
 
-  .row-class{
-    width: 100%;
-    height: 100%;
-  }
-
-  .navbar-nav{
-    width: 100%;
-    justify-content: space-between;
-  }
-
-  .main-content{
-    text-align: start;
-    width: 100%;
-    height: 100%;
-    font-size: 3vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Abril Fatface', cursive;
-  }
-
-  .center-text-content{
-    color: #fff;
-      width: 60%;
-  }
-
-  .image-div{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .main_content_line{
-    width:  90%;
-    height: 0.3vh;
-    background-color: rgba(255, 255, 255, 0.601);
-    margin-top: 5%;
-  }
-
-  .center-text-content button{
-    font-size: 1.5vw;
-    padding: 1% 10%;
-    border: none;
-    border-radius: 5px;
-    color: rgb(255, 255, 255);
-    background: linear-gradient(
-    to right bottom,
-    rgba(165, 153, 255, 0.9),
-    rgba(174, 190, 255, 0.506)
-  );
+.center-text-content button {
+  font-size: 1.5vw;
+  padding: 1% 10%;
+  border: none;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  background: linear-gradient(to right bottom,
+      rgba(251, 167, 255, 0.9),
+      rgba(174, 190, 255, 0.506));
   font-weight: 700;
-  }
+}
 
-  .nav-link{
-    font-weight: bolder;
-    font-size: 1vw;
-  }
+/* section 2 style */
+.section-2 {
+  width: 100%;
+  min-height: 90vh;
+  height: auto;
+  padding: 2%;
+}
 
-  .empty-cercile{
-    position: absolute;
-    top: 10vh;
-    left: 5%;
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
-    background-color: rgba(0, 136, 255, 0.356);
-    filter: blur(5px);
-    box-shadow: 0px 0px 30px rgb(59, 205, 254);
-  }
-
-  .empty-cercile:nth-child(1){
-    position: absolute;
-    top: 40vh;
-    left: 80%;
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
-    background-color: rgba(0, 136, 255, 0.356);
-    filter: blur(5px);
-    box-shadow: 0px 0px 30px rgb(59, 205, 254);
-  }
-
-  .empty-cercile:nth-child(2){
-    position: absolute;
-    top: 70vh;
-    left: 30%;
-    width: 500px;
-    height: 500px;
-    border-radius: 100%;
-    background-color: rgba(0, 136, 255, 0.356);
-    filter: blur(5px);
-    box-shadow: 0px 0px 30px rgb(59, 205, 254);
-  }
-
-  .section-2{
-    width: 100%;
-    min-height: 90vh;
-    height: auto;
-    padding: 2%;
-  }
-
-  @media only screen and (max-width: 600px) {
-  .section-2{
+@media only screen and (max-width: 600px) {
+  .section-2 {
     padding: 10%;
   }
-  }
+}
 
-
-  .course-card{
+.course-card{
+  margin-top: 15%;
+  width: 100%;
+  height: auto;
+  border: 0.5px solid #000;
   border-radius: 10px;
-  min-height: 25vh;
-  max-height: 35vh;
-  padding: 5%;
-  z-index: 1000;
-  cursor: pointer;
-  }
+  overflow: hidden;
+}
 
-  .course-card button{
-    background-color: #fff;
-    color: black;
-    border: none;
-    font-family: 'Abril Fatface', cursive;
-    border-radius: 5px;
-    padding: 2% 10%;
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .course-card a{
-    text-decoration: none;
-  }
-  
-  .course-title-div{
-    width: 100%;
+.icon-div {
+  width: 100%;
+  height: auto;
+  background-color: #393939;
+}
+.course-card a{
+  color: #242424;
+  text-decoration: none;
+}
+
+.course-desc{
+  width: 100%;
     padding: 5%;
     text-align: center;
     font-family: 'Abril Fatface', cursive;
-  }
+}
 
-  .course-title-div h1{
-    color: white;
-  }
+.course-card button{
+  margin: 5% 0%;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+  border: none;
+  font-family: 'Abril Fatface', cursive;
+  border-radius: 5px;
+  padding: 2% 10%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  .title-line{
-    background-color: white;
-    width: 30%;
-    height: 0.3vh;
-    align-items: center;
-    margin: 5%;
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-  }
+/* footer style */
 
-  .course-desc{
-    color: #fff;
-    text-align: center;
-    padding: 10%;
-  }
-
-  .cards-row .col-md{
-    padding: 2% 3%;
-  }
-
-
-  .cards-row:nth-child(1) .col-md:nth-child(1) .course-card{
-    background: linear-gradient(
-    to right bottom,
-    rgba(244, 129, 129, 0.9),
-    rgba(255, 46, 46, 0.671)
-  );
-  }
-
-  .cards-row:nth-child(1) .col-md:nth-child(2) .course-card{
-    background: linear-gradient(
-    to right bottom,
-    rgba(129, 139, 244, 0.9),
-    rgba(46, 53, 255, 0.671)
-  );
-  }
-
-  .cards-row:nth-child(1) .col-md:nth-child(3) .course-card{
-    background: linear-gradient(
-    to right bottom,
-    rgba(226, 230, 34, 0.9),
-    rgba(255, 255, 46, 0.671)
-  );
-  }
-
-  .cards-row:nth-child(1) .col-md:nth-child(4) .course-card{
-    background: linear-gradient(
-    to right bottom,
-    rgba(129, 190, 244, 0.9),
-    rgba(46, 203, 255, 0.671)
-  );
-  }
-
-  .cards-row:nth-child(2) .col-md:nth-child(1) .course-card{
-    background: linear-gradient(
-    to right bottom,
-    rgba(129, 139, 244, 0.9),
-    rgba(46, 53, 255, 0.671)
-  );
-  }
-
-  .cards-row:nth-child(2) .col-md:nth-child(2) .course-card{
-    background: linear-gradient(
-    to right bottom,
-    rgba(244, 129, 129, 0.9),
-    rgba(255, 46, 46, 0.671)
-  );
-  }
-
-  .cards-row:nth-child(2) .col-md:nth-child(3) .course-card{
-    background: linear-gradient(
-    to right bottom,
-    rgba(129, 190, 244, 0.9),
-    rgba(46, 203, 255, 0.671)
-  );
-  }
-
-  .cards-row:nth-child(2) .col-md:nth-child(4) .course-card{
-    background: linear-gradient(
-    to right bottom,
-    rgba(41, 230, 34, 0.9),
-    rgba(95, 255, 46, 0.671)
-  );
-  }
-
-  .cards-row:nth-child(3) .col-md:nth-child(1) .course-card{
-    width: 40%;
-    height: 60vh;
-    background: linear-gradient(
-    to right bottom,
-    rgba(227, 34, 230, 0.9),
-    rgba(255, 46, 231, 0.671)
-  );
-  padding: 0% 2%;
-  }
-
-  .main-footer{
-    background-color: rgb(45, 45, 45);
-    width: 100%;
-    height: 10vh;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.main-footer{
+  background-color: rgb(45, 45, 45);
+  width: 100%;
+  height: 10vh;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
