--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,17 @@ body {
   font-family: 'Abril Fatface', cursive;
 }
 
+.pages-main {
+  text-align: start;
+  width: 100%;
+  height: 100%;
+  font-size: 3vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Abril Fatface', cursive;
+}
+
 .center-text-content {
   color: #fff;
   width: 60%;
