--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,11 @@ body {
   font-family: 'Gloock', serif;
 }
 
+.logo a{
+  text-decoration: none;
+  color: black;
+}
+
 @media only screen and (max-width: 600px) {
   .logo {
     font-size: 5vw;
@@ -51,7 +56,7 @@ body {
 .main-content {
   text-align: start;
   width: 100%;
-  height: 100%;
+  height: 90vh;
   font-size: 3vw;
   display: flex;
   justify-content: center;
