--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Tilt+Warp&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +10,136 @@ body {
   background-color: rgb(255, 255, 255);
   width: 100%;
   height: 100vh;
+  font-family: 'Poppins', sans-serif;
+}
+
+#courses {
+  width: 100%;
+  height: auto;
+}
+
+/* loader */
+.over {
+  overflow: hidden;
+}
+
+#preLoader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 200;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  --cube-size: 25px;
+
+  position: relative;
+  width: calc(var(--cube-size) * 2);
+  height: calc(var(--cube-size) * 2);
+}
+
+.loader .cube {
+  width: var(--cube-size);
+  height: var(--cube-size);
+  background: #ff524f;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: loader-cube-1 2.4s .2s cubic-bezier(.72, .01, .01, 1) infinite;
+}
+
+.loader .cube:nth-of-type(2) {
+  background: #75dcff;
+  right: 0;
+  left: auto;
+  animation-name: loader-cube-2;
+  animation-delay: .4s;
+}
+
+.loader .cube:nth-of-type(3) {
+  background: #ffd20b;
+  bottom: 0;
+  top: auto;
+  animation-name: loader-cube-3;
+  animation-delay: 0s;
+}
+
+@keyframes loader-cube-1 {
+
+  from,
+  to {
+    transform: translate(0%);
+  }
+
+  25% {
+    transform: translateY(100%);
+  }
+
+  50% {
+    transform: translate(100%, 100%);
+  }
+
+  75% {
+    transform: translate(100%);
+  }
+}
+
+@keyframes loader-cube-2 {
+
+  from,
+  to {
+    transform: translate(0);
+  }
+
+  25% {
+    transform: translate(-100%);
+  }
+
+  50% {
+    transform: translate(-100%, 100%);
+  }
+
+  75% {
+    transform: translateY(100%);
+  }
+}
+
+@keyframes loader-cube-3 {
+
+  from,
+  to {
+    transform: translate(0);
+  }
+
+  25% {
+    transform: translate(100%);
+  }
+
+  50% {
+    transform: translate(100%, -100%);
+  }
+
+  75% {
+    transform: translateY(-100%);
+  }
+}
+
+@keyframes dot {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
 
 /* header style */
@@ -20,6 +152,10 @@ body {
   justify-content: space-between;
 }
 
+.navbar-nav a {
+  font-weight: 600;
+}
+
 .logo {
   color: #393939;
   font-size: 1.3vw;
@@ -27,7 +163,7 @@ body {
   font-family: 'Gloock', serif;
 }
 
-.logo a{
+.logo a {
   text-decoration: none;
   color: black;
 }
@@ -38,6 +174,10 @@ body {
   }
 }
 
+.dropdown-menu li a i {
+  padding-right: 5%;
+}
+
 /* bannar section style */
 .bannar-section {
   width: 100%;
@@ -46,6 +186,42 @@ body {
       rgba(232, 125, 251, 0.9),
       rgba(201, 40, 210, 0.876));
   position: relative;
+}
+@media only screen and (min-width: 600px){
+  .bannar-section .mobile{
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .bannar-section {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to right bottom,
+        rgba(232, 125, 251, 0.9),
+        rgba(201, 40, 210, 0.876));
+    position: relative;
+  }
+
+  .bannar-section .row .col-md:nth-child(1){
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bannar-section .row .col-md:nth-child(2){
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bannar-section .large{
+    display: none;
+  }
 }
 
 .row-class {
@@ -58,26 +234,31 @@ body {
   width: 100%;
   height: 90vh;
   font-size: 3vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Abril Fatface', cursive;
 }
 
 .pages-main {
   text-align: start;
-  width: 100%;
+  width: 120%;
   height: 100%;
-  font-size: 3vw;
+  font-size: 2.2vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Abril Fatface', cursive;
+  font-family: 'Tilt Warp', cursive;
 }
 
 .center-text-content {
   color: #fff;
-  width: 60%;
+  width: 50%;
+}
+
+@media only screen and (max-width: 600px) {
+  .center-text-content{
+    width: 95%;
+    text-align: center;
+    font-family: 'Tilt Warp', cursive;
+    font-size: 7vw;
+  }
 }
 
 .image-div {
@@ -86,6 +267,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .main_content_line {
@@ -95,19 +277,115 @@ body {
   margin-top: 5%;
 }
 
-.center-text-content button {
-  font-size: 1.5vw;
-  padding: 1% 10%;
+.main-button {
+  font-size: 1vw;
+  padding: 1.3% 10%;
   border: none;
   border-radius: 5px;
   color: rgb(255, 255, 255);
-  background: linear-gradient(to right bottom,
-      rgba(251, 167, 255, 0.9),
-      rgba(174, 190, 255, 0.506));
-  font-weight: 700;
+  background-image: linear-gradient(to right, #6badffe6, #99bde9e6);
+  font-family: 'Poppins', sans-serif;
+  transition: all 0.5s ease;
+  transition: all 0.5s;
+}
+
+@media only screen and (max-width: 600px) {
+  .main-button {
+    font-size: 4vw;
+    padding: 1.3% 10%;
+    border: none;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    background-image: linear-gradient(to right, #6badffe6, #99bde9e6);
+    font-family: 'Poppins', sans-serif;
+    transition: all 0.5s ease;
+    transition: all 0.5s;
+    margin-top: 10%;
+  }
+}
+
+.main-button:hover {
+  box-shadow: 0 7px 15px 0 rgba(255, 255, 255, 0.31);
+  transition: all 0.5s;
 }
 
 /* section 2 style */
+.LogoDiv {
+  margin: auto;
+  width: 40%;
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container .col {
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.5s;
+  padding: 2% 1.5%;
+}
+
+.container .col a {
+  text-decoration: none;
+}
+
+.course-card:hover {
+  box-shadow: 0 7px 10px 0 rgba(0, 0, 0, 0.299);
+  transition: all 0.5s;
+}
+
+.html {
+  background-image: linear-gradient(to right, #fd7e14, #ff9742);
+}
+
+.css {
+  background-image: linear-gradient(to right, #0d6efd, #61a0ff);
+}
+
+.javascript {
+  background-image: linear-gradient(to right, #ffc107, #fbd666);
+}
+
+.dbms {
+  background-image: linear-gradient(to right, #6610f2, #a36aff);
+}
+
+.java {
+  background-image: linear-gradient(to right, #60a0ff, #a6c9ff);
+}
+
+.mysql {
+  background-image: linear-gradient(to right, #0dcaf0, #a5f0ff);
+}
+
+.testing {
+  background-image: linear-gradient(to right, #0df027, #7fe981);
+}
+
+.computer-fundamental {
+  background-image: linear-gradient(to right, #ff9500, #ffd293);
+}
+
+.linux {
+  background-image: linear-gradient(to right, #fff235, #c3d123);
+}
+
+.computer-fundamental .text-center {
+  font-size: 1.2vw;
+}
+
+.ror {
+  background-image: linear-gradient(to right, #c90a0a, #ff5e5e);
+}
+
+
+.text-center {
+  font-family: 'Tilt Warp', cursive;
+  font-weight: bolder;
+  color: #ffffff;
+}
+
 .section-2 {
   width: 100%;
   min-height: 90vh;
@@ -121,48 +399,18 @@ body {
   }
 }
 
-.course-card{
-  margin-top: 15%;
+.course-card {
   width: 100%;
-  height: auto;
-  border: 0.5px solid #000;
+  height: 21vh;
   border-radius: 10px;
   overflow: hidden;
-}
-
-.icon-div {
-  width: 100%;
-  height: auto;
-  background-color: #393939;
-}
-.course-card a{
-  color: #242424;
-  text-decoration: none;
-}
-
-.course-desc{
-  width: 100%;
-    padding: 5%;
-    text-align: center;
-    font-family: 'Abril Fatface', cursive;
-}
-
-.course-card button{
-  margin: 5% 0%;
-  background-color: #000000;
-  color: rgb(255, 255, 255);
-  border: none;
-  font-family: 'Abril Fatface', cursive;
-  border-radius: 5px;
-  padding: 2% 10%;
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 3%;
+  transition: all 0.5s;
 }
 
 /* footer style */
 
-.main-footer{
+.main-footer {
   background-color: rgb(45, 45, 45);
   width: 100%;
   height: 10vh;
