--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,10 +34,6 @@ body {
   align-items: center;
 }
 
-@media only screen and (max-width: 600px) {
-#java div iframe{
-  height: 50vh;
-}}
 .loader {
   --cube-size: 25px;
 
@@ -238,6 +234,20 @@ body {
   width: 100%;
   height: 90vh;
   font-size: 3vw;
+}
+
+@media only screen and (max-width: 600px) {
+  .main-content {
+    text-align: start;
+    width: 100%;
+    height: 60vh;
+    font-size: 3vw;
+  }
+
+  .main-content iframe{
+    width: 100%;
+    height: 50vh;
+  }
 }
 
 .pages-main {
