--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,3 +433,37 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+
+
+#filter {
+  background-color: #333;
+  position: fixed;
+  top: -50px;
+  width: 100%;
+  transition: top 0.3s;
+}
+
+#filter ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #333;
+}
+
+#filter li {
+  float: left;
+}
+
+#filter li a {
+  display: block;
+  padding: 8px 15px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+}
+
+#filter li a:hover {
+  background-color: #4CAF50;
+}
