--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,13 @@ body {
   font-size: 3vw;
 }
 
+.main-content div{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media only screen and (max-width: 600px) {
   .main-content {
     text-align: start;
